correction lien page contact.html

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 								<a class="txt--black" href="index.html">Accueil</a>
 							</li>
 							<li>
-								<a class="txt--black" href="#portfolio">Portfolio</a>
+								<a class="txt--black" href="index.html">Portfolio</a>
 							</li>
 						</ul>
 					</div>
